@@ -15,7 +15,6 @@ import org.elasticsearch.test.ESTestCase;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.search.suggest.Suggest.COMPARATOR;
 import static org.hamcrest.Matchers.equalTo;
@@ -36,13 +35,17 @@ public class CompletionSuggestionTests extends ESTestCase {
             shardSuggestions.add(suggestion);
         }
         int totalResults = randomIntBetween(0, 5) * nShards;
-        float maxScore = randomIntBetween(totalResults, totalResults*2);
+        float maxScore = randomIntBetween(totalResults, totalResults * 2);
         for (int i = 0; i < totalResults; i++) {
             Suggest.Suggestion<CompletionSuggestion.Entry> suggestion = randomFrom(shardSuggestions);
             CompletionSuggestion.Entry entry = suggestion.getEntries().get(0);
             if (entry.getOptions().size() < size) {
-                CompletionSuggestion.Entry.Option option = new CompletionSuggestion.Entry.Option(i, new Text(""),
-                    maxScore - i, Collections.emptyMap());
+                CompletionSuggestion.Entry.Option option = new CompletionSuggestion.Entry.Option(
+                    i,
+                    new Text(""),
+                    maxScore - i,
+                    Collections.emptyMap()
+                );
                 option.setShardIndex(randomIntBetween(0, Integer.MAX_VALUE));
                 entry.addOption(option);
             }
@@ -73,22 +76,22 @@ public class CompletionSuggestionTests extends ESTestCase {
             CompletionSuggestion suggestion = new CompletionSuggestion(name, size, true);
             CompletionSuggestion.Entry entry = new CompletionSuggestion.Entry(new Text(""), 0, 0);
             suggestion.addTerm(entry);
-            int maxScore = randomIntBetween(totalResults, totalResults*2);
+            int maxScore = randomIntBetween(totalResults, totalResults * 2);
             for (int j = 0; j < size; j++) {
                 String surfaceForm = randomFrom(surfaceForms);
-                CompletionSuggestion.Entry.Option newOption =
-                    new CompletionSuggestion.Entry.Option(j, new Text(surfaceForm), maxScore - j, Collections.emptyMap());
+                CompletionSuggestion.Entry.Option newOption = new CompletionSuggestion.Entry.Option(
+                    j,
+                    new Text(surfaceForm),
+                    maxScore - j,
+                    Collections.emptyMap()
+                );
                 newOption.setShardIndex(0);
                 entry.addOption(newOption);
                 options.add(newOption);
             }
             shardSuggestions.add(suggestion);
         }
-        List<CompletionSuggestion.Entry.Option> expected = options.stream()
-            .sorted(COMPARATOR)
-            .distinct()
-            .limit(size)
-            .collect(Collectors.toList());
+        List<CompletionSuggestion.Entry.Option> expected = options.stream().sorted(COMPARATOR).distinct().limit(size).toList();
         CompletionSuggestion reducedSuggestion = (CompletionSuggestion) shardSuggestions.get(0).reduce(shardSuggestions);
         assertNotNull(reducedSuggestion);
         assertThat(reducedSuggestion.getOptions().size(), lessThanOrEqualTo(size));
@@ -108,8 +111,12 @@ public class CompletionSuggestionTests extends ESTestCase {
             suggestion.addTerm(entry);
             int shardIndex = 0;
             for (int j = 0; j < size; j++) {
-                CompletionSuggestion.Entry.Option newOption =
-                    new CompletionSuggestion.Entry.Option((j + 1) * (i + 1), surfaceForm, score, Collections.emptyMap());
+                CompletionSuggestion.Entry.Option newOption = new CompletionSuggestion.Entry.Option(
+                    (j + 1) * (i + 1),
+                    surfaceForm,
+                    score,
+                    Collections.emptyMap()
+                );
                 newOption.setShardIndex(shardIndex++);
                 entry.addOption(newOption);
             }
