@@ -6,8 +6,6 @@
  */
 package org.elasticsearch.xpack.monitoring.exporter.local;
 
-import com.carrotsearch.hppc.cursors.ObjectObjectCursor;
-
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.message.ParameterizedMessage;
@@ -15,32 +13,30 @@ import org.apache.logging.log4j.util.Supplier;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.admin.indices.delete.DeleteIndexRequest;
-import org.elasticsearch.action.admin.indices.template.put.PutIndexTemplateRequest;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateListener;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
-import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.routing.IndexRoutingTable;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.core.Nullable;
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.common.regex.Regex;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
 import org.elasticsearch.common.time.DateFormatter;
-import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
-import org.elasticsearch.common.xcontent.XContentType;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.gateway.GatewayService;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.license.LicenseStateListener;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.protocol.xpack.watcher.DeleteWatchRequest;
 import org.elasticsearch.protocol.xpack.watcher.PutWatchRequest;
+import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.XPackSettings;
 import org.elasticsearch.xpack.core.monitoring.MonitoredSystem;
 import org.elasticsearch.xpack.core.monitoring.exporter.MonitoringTemplateUtils;
@@ -51,6 +47,7 @@ import org.elasticsearch.xpack.core.watcher.transport.actions.get.GetWatchRespon
 import org.elasticsearch.xpack.core.watcher.transport.actions.put.PutWatchAction;
 import org.elasticsearch.xpack.core.watcher.watch.Watch;
 import org.elasticsearch.xpack.monitoring.Monitoring;
+import org.elasticsearch.xpack.monitoring.MonitoringTemplateRegistry;
 import org.elasticsearch.xpack.monitoring.cleaner.CleanerService;
 import org.elasticsearch.xpack.monitoring.exporter.ClusterAlertsUtil;
 import org.elasticsearch.xpack.monitoring.exporter.ExportBulk;
@@ -77,9 +74,6 @@ import java.util.stream.Collectors;
 import static org.elasticsearch.common.Strings.collectionToCommaDelimitedString;
 import static org.elasticsearch.xpack.core.ClientHelper.MONITORING_ORIGIN;
 import static org.elasticsearch.xpack.core.ClientHelper.executeAsyncWithOrigin;
-import static org.elasticsearch.xpack.core.monitoring.exporter.MonitoringTemplateUtils.LAST_UPDATED_VERSION;
-import static org.elasticsearch.xpack.core.monitoring.exporter.MonitoringTemplateUtils.TEMPLATE_VERSION;
-import static org.elasticsearch.xpack.core.monitoring.exporter.MonitoringTemplateUtils.templateName;
 
 public class LocalExporter extends Exporter implements ClusterStateListener, CleanerService.Listener, LicenseStateListener {
 
@@ -94,7 +88,8 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
     public static final Setting.AffixSetting<TimeValue> WAIT_MASTER_TIMEOUT_SETTING = Setting.affixKeySetting(
         "xpack.monitoring.exporters.",
         "wait_master.timeout",
-        (key) -> Setting.timeSetting(key, TimeValue.timeValueSeconds(30), Property.Dynamic, Property.NodeScope), TYPE_DEPENDENCY
+        (key) -> Setting.timeSetting(key, TimeValue.timeValueSeconds(30), Property.Dynamic, Property.NodeScope, Property.DeprecatedWarning),
+        TYPE_DEPENDENCY
     );
 
     private final Client client;
@@ -113,8 +108,12 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
 
     private long stateInitializedTime;
 
-    public LocalExporter(Exporter.Config config, Client client, MonitoringMigrationCoordinator migrationCoordinator,
-                         CleanerService cleanerService) {
+    public LocalExporter(
+        Exporter.Config config,
+        Client client,
+        MonitoringMigrationCoordinator migrationCoordinator,
+        CleanerService cleanerService
+    ) {
         super(config);
         this.client = client;
         this.clusterService = config.clusterService();
@@ -157,7 +156,7 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
      *
      * @return {@code true} if it is ready. {@code false} if not.
      */
-    boolean isExporterReady() {
+    public boolean isExporterReady() {
         // forces the setup to occur if it hasn't already
         final boolean running = resolveBulk(clusterService.state(), false) != null;
         // Report on watcher readiness
@@ -298,10 +297,9 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
      */
     private boolean setupIfNotElectedMaster(final ClusterState clusterState) {
         // any required template is not yet installed in the given cluster state, we'll wait.
-        for (final String template : MonitoringTemplateUtils.TEMPLATE_IDS) {
-            if (hasTemplate(clusterState, MonitoringTemplateUtils.templateName(template)) == false) {
-                logger.debug("monitoring index template [{}] does not exist, so service cannot start (waiting on master)",
-                             template);
+        for (final String template : MonitoringTemplateRegistry.TEMPLATE_NAMES) {
+            if (hasTemplate(clusterState, template) == false) {
+                logger.debug("monitoring index template [{}] does not exist, so service cannot start (waiting on master)", template);
                 return false;
             }
         }
@@ -342,18 +340,23 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
         final List<Runnable> asyncActions = new ArrayList<>();
         final AtomicInteger pendingResponses = new AtomicInteger(0);
 
-        // Check that each required template exists, installing it if needed
-        final List<String> missingTemplates = Arrays.stream(MonitoringTemplateUtils.TEMPLATE_IDS)
-                .filter(id -> hasTemplate(clusterState, templateName(id)) == false)
-                .collect(Collectors.toList());
+        // Check that each required template exists. We can install the other resources needed while we wait for them to appear, so
+        // continue with the async installation and return the readiness at the end of the setup.
+        final List<String> missingTemplates = Arrays.stream(MonitoringTemplateRegistry.TEMPLATE_NAMES)
+            .filter(name -> hasTemplate(clusterState, name) == false)
+            .toList();
 
+        boolean templatesInstalled = false;
         if (missingTemplates.isEmpty() == false) {
-            logger.debug((Supplier<?>) () -> new ParameterizedMessage("template {} not found", missingTemplates));
-            for (String templateId : missingTemplates) {
-                final String templateName = MonitoringTemplateUtils.templateName(templateId);
-                asyncActions.add(() -> putTemplate(templateName, MonitoringTemplateUtils.loadTemplate(templateId),
-                        new ResponseActionListener<>("template", templateName, pendingResponses)));
-            }
+            // Check to see if the template installation is disabled. If it isn't, then we should say so in the log.
+            logger.debug(
+                (Supplier<?>) () -> new ParameterizedMessage(
+                    "monitoring index templates [{}] do not exist, so service " + "cannot start (waiting on registered templates)",
+                    missingTemplates
+                )
+            );
+        } else {
+            templatesInstalled = true;
         }
 
         // avoid constantly trying to setup Watcher, which requires a lot of overhead and avoid attempting to setup during a cluster state
@@ -371,16 +374,20 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
                 logger.trace("already installing something, waiting for install to complete");
                 return false;
             }
-        } else {
+        } else if (templatesInstalled) {
             logger.debug("monitoring index templates are installed on master node, service can start");
         }
 
-        // everything is setup (or running)
-        return true;
+        // everything the exporter can do is setup (or running). Return status of templates.
+        return templatesInstalled;
     }
 
-    private void setupClusterAlertsTasks(ClusterState clusterState, boolean clusterStateChange, List<Runnable> asyncActions,
-                                         AtomicInteger pendingResponses) {
+    private void setupClusterAlertsTasks(
+        ClusterState clusterState,
+        boolean clusterStateChange,
+        List<Runnable> asyncActions,
+        AtomicInteger pendingResponses
+    ) {
         boolean shouldSetUpWatcher = state.get() == State.RUNNING && clusterStateChange == false;
         if (canUseWatcher()) {
             if (shouldSetUpWatcher) {
@@ -394,22 +401,33 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
                     logger.trace("installing monitoring watches");
                     getClusterAlertsInstallationAsyncActions(indexExists, asyncActions, pendingResponses);
                 } else {
-                    logger.trace("skipping installing monitoring watches, watches=[{}], indexExists=[{}], watcherSetup=[{}]",
-                        watches, indexExists, watcherSetup.get());
+                    logger.trace(
+                        "skipping installing monitoring watches, watches=[{}], indexExists=[{}], watcherSetup=[{}]",
+                        watches,
+                        indexExists,
+                        watcherSetup.get()
+                    );
                 }
             } else {
                 logger.trace("watches shouldn't be setup, because state=[{}] and clusterStateChange=[{}]", state.get(), clusterStateChange);
             }
         } else {
-            logger.trace("watches can't be used, because xpack.watcher.enabled=[{}] and " +
-                    "xpack.monitoring.exporters._local.cluster_alerts.management.enabled=[{}]",
+            logger.trace(
+                "watches will not be installed because xpack.watcher.enabled=[{}] and "
+                    + "xpack.monitoring.exporters._local.cluster_alerts.management.enabled=[{}]",
                 XPackSettings.WATCHER_ENABLED.get(config.settings()),
-                CLUSTER_ALERTS_MANAGEMENT_SETTING.getConcreteSettingForNamespace(config.name()).get(config.settings()));
+                CLUSTER_ALERTS_MANAGEMENT_SETTING.getConcreteSettingForNamespace(config.name()).get(config.settings())
+            );
         }
     }
 
-    private void removeClusterAlertsTasks(ClusterState clusterState, Consumer<ExporterResourceStatus> setupListener,
-                                          List<Runnable> asyncActions, AtomicInteger pendingResponses, List<Exception> errors) {
+    private void removeClusterAlertsTasks(
+        ClusterState clusterState,
+        Consumer<ExporterResourceStatus> setupListener,
+        List<Runnable> asyncActions,
+        AtomicInteger pendingResponses,
+        List<Exception> errors
+    ) {
         if (canUseWatcher()) {
             if (state.get() != State.TERMINATED) {
                 final IndexRoutingTable watches = clusterState.routingTable().index(Watch.INDEX);
@@ -430,8 +448,12 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
         }
     }
 
-    private void responseReceived(final AtomicInteger pendingResponses, final boolean success, final Runnable onComplete,
-                                  final @Nullable AtomicBoolean setup) {
+    private void responseReceived(
+        final AtomicInteger pendingResponses,
+        final boolean success,
+        final Runnable onComplete,
+        final @Nullable AtomicBoolean setup
+    ) {
         if (setup != null && success == false) {
             setup.set(false);
         }
@@ -448,18 +470,7 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
     private boolean hasTemplate(final ClusterState clusterState, final String templateName) {
         final IndexTemplateMetadata template = clusterState.getMetadata().getTemplates().get(templateName);
 
-        return template != null && hasValidVersion(template.getVersion(), LAST_UPDATED_VERSION);
-    }
-
-    // FIXME this should use the IndexTemplateMetadataUpgrader
-    private void putTemplate(String template, String source, ActionListener<AcknowledgedResponse> listener) {
-        logger.debug("installing template [{}]", template);
-
-        PutIndexTemplateRequest request = new PutIndexTemplateRequest(template).source(source, XContentType.JSON);
-        assert Thread.currentThread().isInterrupted() == false : "current thread has been interrupted before putting index template!!!";
-
-        executeAsyncWithOrigin(client.threadPool().getThreadContext(), MONITORING_ORIGIN, request, listener,
-                client.admin().indices()::putTemplate);
+        return template != null && hasValidVersion(template.getVersion(), MonitoringTemplateRegistry.REGISTRY_VERSION);
     }
 
     /**
@@ -470,7 +481,7 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
      * @return {@code true} if the version exists and it's &gt;= to the minimum version. {@code false} otherwise.
      */
     private boolean hasValidVersion(final Object version, final long minimumVersion) {
-        return version instanceof Number && ((Number)version).intValue() >= minimumVersion;
+        return version instanceof Number && ((Number) version).intValue() >= minimumVersion;
     }
 
     /**
@@ -479,27 +490,41 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
      * @param asyncActions Asynchronous actions are added to for each Watch.
      * @param pendingResponses Pending response countdown we use to track completion.
      */
-    private void getClusterAlertsInstallationAsyncActions(final boolean indexExists, final List<Runnable> asyncActions,
-                                                          final AtomicInteger pendingResponses) {
-        final boolean canAddWatches = licenseState.checkFeature(XPackLicenseState.Feature.MONITORING_CLUSTER_ALERTS);
+    private void getClusterAlertsInstallationAsyncActions(
+        final boolean indexExists,
+        final List<Runnable> asyncActions,
+        final AtomicInteger pendingResponses
+    ) {
+        final boolean canAddWatches = Monitoring.MONITORING_CLUSTER_ALERTS_FEATURE.check(licenseState);
 
         for (final String watchId : ClusterAlertsUtil.WATCH_IDS) {
             final String uniqueWatchId = ClusterAlertsUtil.createUniqueWatchId(clusterService, watchId);
-            final boolean addWatch = canAddWatches && clusterAlertBlacklist.contains(watchId) == false &&
-                decommissionClusterAlerts == false;
+            final boolean addWatch = canAddWatches
+                && clusterAlertBlacklist.contains(watchId) == false
+                && decommissionClusterAlerts == false;
 
             // we aren't sure if no watches exist yet, so add them
             if (indexExists) {
                 if (addWatch) {
                     logger.trace("checking monitoring watch [{}]", uniqueWatchId);
 
-                    asyncActions.add(() -> client.execute(GetWatchAction.INSTANCE, new GetWatchRequest(uniqueWatchId),
-                        new GetAndPutWatchResponseActionListener(client, watchId, uniqueWatchId, pendingResponses)));
+                    asyncActions.add(
+                        () -> client.execute(
+                            GetWatchAction.INSTANCE,
+                            new GetWatchRequest(uniqueWatchId),
+                            new GetAndPutWatchResponseActionListener(client, watchId, uniqueWatchId, pendingResponses)
+                        )
+                    );
                 } else {
                     logger.trace("pruning monitoring watch [{}]", uniqueWatchId);
 
-                    asyncActions.add(() -> client.execute(DeleteWatchAction.INSTANCE, new DeleteWatchRequest(uniqueWatchId),
-                                                               new ResponseActionListener<>("watch", uniqueWatchId, pendingResponses)));
+                    asyncActions.add(
+                        () -> client.execute(
+                            DeleteWatchAction.INSTANCE,
+                            new DeleteWatchRequest(uniqueWatchId),
+                            new ResponseActionListener<>("watch", uniqueWatchId, pendingResponses)
+                        )
+                    );
                 }
             } else if (addWatch) {
                 logger.trace("adding monitoring watch [{}]", uniqueWatchId);
@@ -517,27 +542,45 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
      * @param setupListener The listener to call with the status of the watch if there are watches to remove.
      * @param errors A list to collect errors during the watch removal process.
      */
-    private void addClusterAlertsRemovalAsyncActions(final boolean indexExists, final List<Runnable> asyncActions,
-                                                          final AtomicInteger pendingResponses,
-                                                          Consumer<ExporterResourceStatus> setupListener, final List<Exception> errors) {
+    private void addClusterAlertsRemovalAsyncActions(
+        final boolean indexExists,
+        final List<Runnable> asyncActions,
+        final AtomicInteger pendingResponses,
+        Consumer<ExporterResourceStatus> setupListener,
+        final List<Exception> errors
+    ) {
         for (final String watchId : ClusterAlertsUtil.WATCH_IDS) {
             final String uniqueWatchId = ClusterAlertsUtil.createUniqueWatchId(clusterService, watchId);
             if (indexExists) {
                 logger.trace("pruning monitoring watch [{}]", uniqueWatchId);
-                asyncActions.add(() -> client.execute(DeleteWatchAction.INSTANCE, new DeleteWatchRequest(uniqueWatchId),
-                    new ErrorCapturingResponseListener<>("watch", uniqueWatchId, pendingResponses, setupListener, errors, this.name())));
+                asyncActions.add(
+                    () -> client.execute(
+                        DeleteWatchAction.INSTANCE,
+                        new DeleteWatchRequest(uniqueWatchId),
+                        new ErrorCapturingResponseListener<>("watch", uniqueWatchId, pendingResponses, setupListener, errors, this.name())
+                    )
+                );
             }
         }
     }
 
-    private void putWatch(final Client client, final String watchId, final String uniqueWatchId, final AtomicInteger pendingResponses) {
+    private void putWatch(
+        final Client clientToUse,
+        final String watchId,
+        final String uniqueWatchId,
+        final AtomicInteger pendingResponses
+    ) {
         final String watch = ClusterAlertsUtil.loadWatch(clusterService, watchId);
 
         logger.trace("adding monitoring watch [{}]", uniqueWatchId);
 
-        executeAsyncWithOrigin(client, MONITORING_ORIGIN, PutWatchAction.INSTANCE,
-                new PutWatchRequest(uniqueWatchId, new BytesArray(watch), XContentType.JSON),
-                new ResponseActionListener<>("watch", uniqueWatchId, pendingResponses, watcherSetup));
+        executeAsyncWithOrigin(
+            clientToUse,
+            MONITORING_ORIGIN,
+            PutWatchAction.INSTANCE,
+            new PutWatchRequest(uniqueWatchId, new BytesArray(watch), XContentType.JSON),
+            new ResponseActionListener<>("watch", uniqueWatchId, pendingResponses, watcherSetup)
+        );
     }
 
     /**
@@ -546,66 +589,70 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
      * @return {@code true} to use Cluster Alerts.
      */
     private boolean canUseWatcher() {
-        return XPackSettings.WATCHER_ENABLED.get(config.settings()) &&
-                CLUSTER_ALERTS_MANAGEMENT_SETTING.getConcreteSettingForNamespace(config.name()).get(config.settings());
+        return XPackSettings.WATCHER_ENABLED.get(config.settings())
+            && CLUSTER_ALERTS_MANAGEMENT_SETTING.getConcreteSettingForNamespace(config.name()).get(config.settings());
     }
 
     @Override
     public void onCleanUpIndices(TimeValue retention) {
-        if (state.get() != State.RUNNING) {
+        ClusterState clusterState = clusterService.state();
+        if (clusterService.localNode() == null
+            || clusterState == null
+            || clusterState.blocks().hasGlobalBlockWithLevel(ClusterBlockLevel.METADATA_WRITE)) {
             logger.debug("exporter not ready");
             return;
         }
 
-        if (clusterService.state().nodes().isLocalNodeElectedMaster()) {
+        if (clusterState.nodes().isLocalNodeElectedMaster()) {
             // Reference date time will be compared to index.creation_date settings,
             // that's why it must be in UTC
             ZonedDateTime expiration = ZonedDateTime.now(ZoneOffset.UTC).minus(retention.millis(), ChronoUnit.MILLIS);
             logger.debug("cleaning indices [expiration={}, retention={}]", expiration, retention);
 
-            ClusterState clusterState = clusterService.state();
-            if (clusterState != null) {
-                final long expirationTimeMillis = expiration.toInstant().toEpochMilli();
-                final long currentTimeMillis = System.currentTimeMillis();
+            final long expirationTimeMillis = expiration.toInstant().toEpochMilli();
+            final long currentTimeMillis = System.currentTimeMillis();
 
-                // list of index patterns that we clean up
-                final String[] indexPatterns = new String[] { ".monitoring-*" };
+            // list of index patterns that we clean up
+            final String[] indexPatterns = new String[] { ".monitoring-*" };
 
-                // Get the names of the current monitoring indices
-                final Set<String> currents = MonitoredSystem.allSystems()
-                                                    .map(s -> MonitoringTemplateUtils.indexName(dateTimeFormatter, s, currentTimeMillis))
-                                                    .collect(Collectors.toSet());
+            // Get the names of the current monitoring indices
+            final Set<String> currents = MonitoredSystem.allSystems()
+                .map(s -> MonitoringTemplateUtils.indexName(dateTimeFormatter, s, currentTimeMillis))
+                .collect(Collectors.toSet());
 
-                // avoid deleting the current alerts index, but feel free to delete older ones
-                currents.add(".monitoring-alerts-" + TEMPLATE_VERSION);
+            // avoid deleting the current alerts index, but feel free to delete older ones
+            currents.add(MonitoringTemplateRegistry.ALERTS_INDEX_TEMPLATE_NAME);
 
-                Set<String> indices = new HashSet<>();
-                for (ObjectObjectCursor<String, IndexMetadata> index : clusterState.getMetadata().indices()) {
-                    String indexName =  index.key;
+            Set<String> indices = new HashSet<>();
+            for (var index : clusterState.getMetadata().indices().entrySet()) {
+                String indexName = index.getKey();
 
-                    if (Regex.simpleMatch(indexPatterns, indexName)) {
-                        // Never delete any "current" index (e.g., today's index or the most recent version no timestamp, like alerts)
-                        if (currents.contains(indexName)) {
-                            continue;
+                if (Regex.simpleMatch(indexPatterns, indexName)) {
+                    // Never delete any "current" index (e.g., today's index or the most recent version no timestamp, like alerts)
+                    if (currents.contains(indexName)) {
+                        continue;
+                    }
+
+                    long creationDate = index.getValue().getCreationDate();
+                    if (creationDate <= expirationTimeMillis) {
+                        if (logger.isDebugEnabled()) {
+                            logger.debug(
+                                "detected expired index [name={}, created={}, expired={}]",
+                                indexName,
+                                Instant.ofEpochMilli(creationDate).atZone(ZoneOffset.UTC),
+                                expiration
+                            );
                         }
-
-                        long creationDate = index.value.getCreationDate();
-                        if (creationDate <= expirationTimeMillis) {
-                            if (logger.isDebugEnabled()) {
-                                logger.debug("detected expired index [name={}, created={}, expired={}]",
-                                        indexName, Instant.ofEpochMilli(creationDate).atZone(ZoneOffset.UTC), expiration);
-                            }
-                            indices.add(indexName);
-                        }
+                        indices.add(indexName);
                     }
                 }
+            }
 
-                if (indices.isEmpty() == false) {
-                    logger.info("cleaning up [{}] old indices", indices.size());
-                    deleteIndices(indices);
-                } else {
-                    logger.debug("no old indices found for clean up");
-                }
+            if (indices.isEmpty() == false) {
+                logger.info("cleaning up [{}] old indices", indices.size());
+                deleteIndices(indices);
+            } else {
+                logger.debug("no old indices found for clean up");
             }
         }
     }
@@ -613,24 +660,29 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
     private void deleteIndices(Set<String> indices) {
         logger.trace("deleting {} indices: [{}]", indices.size(), collectionToCommaDelimitedString(indices));
         final DeleteIndexRequest request = new DeleteIndexRequest(indices.toArray(new String[indices.size()]));
-        executeAsyncWithOrigin(client.threadPool().getThreadContext(), MONITORING_ORIGIN, request,
-                new ActionListener<AcknowledgedResponse>() {
-                    @Override
-                    public void onResponse(AcknowledgedResponse response) {
-                        if (response.isAcknowledged()) {
-                            logger.debug("{} indices deleted", indices.size());
-                        } else {
-                            // Probably means that the delete request has timed out,
-                            // the indices will survive until the next clean up.
-                            logger.warn("deletion of {} indices wasn't acknowledged", indices.size());
-                        }
+        executeAsyncWithOrigin(
+            client.threadPool().getThreadContext(),
+            MONITORING_ORIGIN,
+            request,
+            new ActionListener<AcknowledgedResponse>() {
+                @Override
+                public void onResponse(AcknowledgedResponse response) {
+                    if (response.isAcknowledged()) {
+                        logger.debug("{} indices deleted", indices.size());
+                    } else {
+                        // Probably means that the delete request has timed out,
+                        // the indices will survive until the next clean up.
+                        logger.warn("deletion of {} indices wasn't acknowledged", indices.size());
                     }
+                }
 
-                    @Override
-                    public void onFailure(Exception e) {
-                        logger.error("failed to delete indices", e);
-                    }
-                }, client.admin().indices()::delete);
+                @Override
+                public void onFailure(Exception e) {
+                    logger.error("failed to delete indices", e);
+                }
+            },
+            client.admin().indices()::delete
+        );
     }
 
     enum State {
@@ -662,8 +714,13 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
             this(type, name, countDown, () -> {}, setup);
         }
 
-        private ResponseActionListener(String type, String name, AtomicInteger countDown, Runnable onComplete,
-                                       @Nullable AtomicBoolean setup) {
+        private ResponseActionListener(
+            String type,
+            String name,
+            AtomicInteger countDown,
+            Runnable onComplete,
+            @Nullable AtomicBoolean setup
+        ) {
             this.type = Objects.requireNonNull(type);
             this.name = Objects.requireNonNull(name);
             this.countDown = Objects.requireNonNull(countDown);
@@ -674,7 +731,7 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
         @Override
         public void onResponse(Response response) {
             if (response instanceof AcknowledgedResponse) {
-                if (((AcknowledgedResponse)response).isAcknowledged()) {
+                if (((AcknowledgedResponse) response).isAcknowledged()) {
                     logger.trace("successfully set monitoring {} [{}]", type, name);
                 } else {
                     logger.error("failed to set monitoring {} [{}]", type, name);
@@ -695,8 +752,14 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
     private class ErrorCapturingResponseListener<Response> extends ResponseActionListener<Response> {
         private final List<Exception> errors;
 
-        ErrorCapturingResponseListener(String type, String name, AtomicInteger countDown,
-                                              Consumer<ExporterResourceStatus> setupListener, List<Exception> errors, String configName) {
+        ErrorCapturingResponseListener(
+            String type,
+            String name,
+            AtomicInteger countDown,
+            Consumer<ExporterResourceStatus> setupListener,
+            List<Exception> errors,
+            String configName
+        ) {
             super(type, name, countDown, () -> {
                 // Called on completion of all removal tasks
                 ExporterResourceStatus status = ExporterResourceStatus.determineReadiness(configName, TYPE, errors);
@@ -707,7 +770,7 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
 
         @Override
         public void onResponse(Response response) {
-            if (response instanceof AcknowledgedResponse && ((AcknowledgedResponse)response).isAcknowledged() == false) {
+            if (response instanceof AcknowledgedResponse && ((AcknowledgedResponse) response).isAcknowledged() == false) {
                 errors.add(new ElasticsearchException("failed to set monitoring {} [{}]", type, name));
             }
             super.onResponse(response);
@@ -727,9 +790,12 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
         private final String uniqueWatchId;
         private final AtomicInteger countDown;
 
-        private GetAndPutWatchResponseActionListener(final Client client,
-                                                     final String watchId, final String uniqueWatchId,
-                                                     final AtomicInteger countDown) {
+        private GetAndPutWatchResponseActionListener(
+            final Client client,
+            final String watchId,
+            final String uniqueWatchId,
+            final AtomicInteger countDown
+        ) {
             this.client = Objects.requireNonNull(client);
             this.watchId = Objects.requireNonNull(watchId);
             this.uniqueWatchId = Objects.requireNonNull(uniqueWatchId);
@@ -738,8 +804,11 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
 
         @Override
         public void onResponse(GetWatchResponse response) {
-            if (response.isFound() &&
-                hasValidVersion(response.getSource().getValue("metadata.xpack.version_created"), ClusterAlertsUtil.LAST_UPDATED_VERSION)) {
+            if (response.isFound()
+                && hasValidVersion(
+                    response.getSource().getValue("metadata.xpack.version_created"),
+                    ClusterAlertsUtil.LAST_UPDATED_VERSION
+                )) {
                 logger.trace("found monitoring watch [{}]", uniqueWatchId);
                 responseReceived(countDown, true, () -> {}, watcherSetup);
             } else {
@@ -752,8 +821,7 @@ public class LocalExporter extends Exporter implements ClusterStateListener, Cle
             responseReceived(countDown, false, () -> {}, watcherSetup);
 
             if ((e instanceof IndexNotFoundException) == false) {
-                logger.error((Supplier<?>) () ->
-                             new ParameterizedMessage("failed to get monitoring watch [{}]", uniqueWatchId), e);
+                logger.error((Supplier<?>) () -> new ParameterizedMessage("failed to get monitoring watch [{}]", uniqueWatchId), e);
             }
         }
 
