@@ -18,7 +18,6 @@ import java.time.Clock;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Abstract base class for object that build some sort of {@link org.opensaml.saml.common.SAMLObject}
@@ -37,20 +36,27 @@ public abstract class SamlMessageBuilder {
         this.clock = clock;
     }
 
-    protected String getIdentityProviderEndpoint(String binding,
-                                                 Function<IDPSSODescriptor, ? extends Collection<? extends Endpoint>> selector) {
-        final List<String> locations = identityProvider.getRoleDescriptors(IDPSSODescriptor.DEFAULT_ELEMENT_NAME).stream()
-                .map(rd -> (IDPSSODescriptor) rd)
-                .flatMap(idp -> selector.apply(idp).stream())
-                .filter(endp -> binding.equals(endp.getBinding()))
-                .map(sso -> sso.getLocation())
-                .collect(Collectors.toList());
+    protected String getIdentityProviderEndpoint(
+        String binding,
+        Function<IDPSSODescriptor, ? extends Collection<? extends Endpoint>> selector
+    ) {
+        final List<String> locations = identityProvider.getRoleDescriptors(IDPSSODescriptor.DEFAULT_ELEMENT_NAME)
+            .stream()
+            .map(rd -> (IDPSSODescriptor) rd)
+            .flatMap(idp -> selector.apply(idp).stream())
+            .filter(endp -> binding.equals(endp.getBinding()))
+            .map(Endpoint::getLocation)
+            .toList();
         if (locations.isEmpty()) {
             return null;
         }
         if (locations.size() > 1) {
-            throw new ElasticsearchException("Found multiple locations for binding [{}] in descriptor [{}] - [{}]",
-                    binding, identityProvider.getID(), locations);
+            throw new ElasticsearchException(
+                "Found multiple locations for binding [{}] in descriptor [{}] - [{}]",
+                binding,
+                identityProvider.getID(),
+                locations
+            );
         }
         return locations.get(0);
     }
